# perspectives

./: .env.example  README.md  pyproject.toml
datasets/: README.md  view_dataset.ipynb
datasets/amazon/: download_amazon.py  transform_amazon.ipynb
datasets/germeval/: download_germeval.md  transform_germeval.ipynb
datasets/gvfc/: download_gvfc.md  transform_gvfc.ipynb
datasets/newsbias2/: download_newsbias2.sh  transform_newsbias2.ipynb
datasets/newsgroups/: download_and_transform_20ng.ipynb
datasets/redditconflict/: download_redditconflict.md  transform_redditconflict.ipynb
datasets/spotify/: download_spotify.py  transform_spotify.ipynb
document_modification/: README.md  document_modification.py  run_modification.sh
document_modification_fewshot/: README.md  convert_to_dataset.py  run_fewshot_dataset.sh  run_fewshot_modification.sh  run_fewshot_sampling.sh  sample_fewshot_examples.py  view_fewshot_dataset.ipynb
experiments/: README.md  clustering_evaluation.py  combine_result_csvs.py  models.py
experiments/fewshot/: document_embedding_fewshot.py  run_fewshot_experiment.py  run_fewshot_experiments.sh
experiments/zeroshot/: document_embedding.py  run_experiment.py  run_experiments.sh
visualizations/: visualize_results.ipynb
vllm/: README.md  serve_vllm.py
