[project]
name = "perspectives"
version = "0.1.0"
description = "Code for the evaluation of the Paper DATS Perspectives - Interactive Clustering in the Discourse Analysis Tool Suite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "setfit>=1.1.2",
    "kagglehub==0.3.12",
    "seaborn==0.13.2",
    "cuml-cu12==25.6.0",
    "compressed-tensors==0.9.4",
    "gguf==0.17.0",
    "llvmlite==0.44.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.3.14",
    "nvidia-cuda-cupti-cu12==12.8.57",
    "nvidia-cuda-nvrtc-cu12==12.8.61",
    "nvidia-cuda-runtime-cu12==12.8.57",
    "nvidia-cudnn-cu12==9.7.1.26",
    "nvidia-cufft-cu12==11.3.3.41",
    "nvidia-curand-cu12==10.3.9.55",
    "nvidia-cusolver-cu12==11.7.2.55",
    "nvidia-cusparse-cu12==12.5.7.53",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.8.61",
    "nvidia-nvtx-cu12==12.8.55",
    "protobuf==5.29.5",
    "setuptools==79.0.1",
    "sympy==1.14.0",
    "torch==2.7.0+cu128",
    "torchaudio==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "transformers==4.52.4",
    "triton==3.3.0",
    "vllm==0.9.0.1",
    "xformers==0.0.30",
    "xgrammar==0.1.19",
    "ollama>=0.5.1",
    "flashinfer-python>=0.2.6.post1",
    "litellm>=1.72.2",
    "hdbscan>=0.8.40",
    "peft>=0.15.2",
    "optuna>=4.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
rapids = { index = "nvidia" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true
